--- a/assets/media.css
+++ b/assets/media.css
@@ -1,29 +1,4 @@
 @media only screen and (max-width: 990px){
-	
-	.dashboard
-	.section-2,
-	.section-3,
-	.section-4,
-	.section-5,
-	.section-6{width:728px;}
-
-	.dashboard {flex-direction: column;align-items: center;text-align: center; width: 100%}
-	.dashboard-img{position:unset;width: 82%;padding: 3rem 0 0;}
-	.dashboard-text{width: 80%;margin: 0 auto;}
-	.section-1-part2{width: 90%;}
-	.section-2-part1__items a{width: 80%;height: 75%;padding: 30px 10px 0 10px;}
-    .section-2-part1__items a:hover{width: 83%;height: 78%;	}
-	.section-2-part1__items a p{height: 100px;margin-bottom: 0;text-align: center;}
-	.section-4-main__tabs{padding: 20px 15px;}
-	#tabs-1,
-	#tabs-2,
-	#tabs-3,
-	#tabs-4,
-	#tabs-5{flex-direction: column;}
-	.links p{text-align: center;}
-}
-
-@media only screen and (max-width: 767px){
 	.header{position:sticky; z-index:999;width:100%;padding: 0 20px;}
 	.header-menu{width:100%;height:0px; overflow: hidden;display:none;}
 	.header-menu .button {margin: 10px 0;}
@@ -34,11 +9,39 @@
 	.header__icon-bar{display: block;}
 	.is-open{height: auto;overflow: auto;background-color: var(--grey);width: 100%;position: absolute;left: 0;display:block;top: 5.5em;padding: 0 20px 20px;}
 	
+	.dashboard
 	.section-2,
 	.section-3,
 	.section-4,
 	.section-5,
-	.section-6{	width: 100%;padding: 20px;}
+	.section-6,
+	.testimonials,
+	.footer-container{width:728px;}
+
+	.dashboard {flex-direction: column;align-items: center;text-align: center; width: 100%}
+	.dashboard-img{position:unset;width: 82%;padding: 3rem 0 0;}
+	.dashboard-text{width: 80%;margin: 0 auto;}
+	.section-1-part2{width: 90%;}
+	.section-2-part1__items a{width: 70%;height: 75%;}
+    .section-2-part1__items a:hover{width: 75%;height: 78%;	}
+	.section-2-part1__items a p{height: 100px;margin-bottom: 0;text-align: center;}
+	.section-2-part2{width: 40%;}
+	.section-4-main__tabs{padding: 1rem;}
+	#tabs-1,
+	#tabs-2,
+	#tabs-3,
+	#tabs-4,
+	#tabs-5{flex-direction: column;}
+	.links p{text-align: center;}
+	.card{width: 100%;margin:1.2rem 0;}
+}
+
+@media only screen and (max-width: 767px){
+	.section-2,
+	.section-3,
+	.section-4,
+	.section-5,
+	.section-6{	width: 100%;padding: 1.2rem;}
 
 	.section-5-main div,
 	.section-2,
@@ -47,13 +50,12 @@
 
 	.section-2-part1{align-self: center;width: 90%;}
 	.section-2-part2{width: 100%;}	
-	.section-3-main__items{flex-shrink: 1;width: 90%;}
+	.section-3-main__items{flex-shrink: 1;width: 90%;height: 10rem;}
 	.section-5-main{background-size: 261% auto;}
-	.section-6-part1{padding-right: 0;width: 100%;align-items: self-start;text-align: center;}
+	.section-6-part1{padding-right: 0;width: 100%;align-items: self-start;}
 	.section-6-part2{margin: 30px auto;width: 90%;}
 	.testimonials{width: 100%;padding: 0 20px;}
-	.card{width: 100%;margin:20px 0;}
-	.footer-container {flex-direction: column;}
+	.footer-container {width: 100%;padding: 1.2rem 2rem; flex-direction: column;justify-content: center;}
 }
 @media only screen and (max-width: 480px){
 	.section-2-part1{flex-direction: column;justify-content: center;align-items: center;width: 100%;}
