--- a/assets/media.css
+++ b/assets/media.css
@@ -9,6 +9,7 @@
 	.header__icon-bar{display: block;}
 	.is-open{height: auto;overflow: auto;background-color: var(--grey);width: 100%;position: absolute;left: 0;display:block;top: 5.5em;padding: 0 20px 20px;}
 	
+	.header-dropdown{position: relative; top: auto;	z-index: 0;	box-shadow: 0px 0px 0px 0px;}
 	.dashboard
 	.section-2,
 	.section-3,
